# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  controler.py  model.py
page_analyzer/templates/: base.html  flash.html  footer.html  index.html  page.html  url.html  urls.html
